<resources>
    <string name="app_name">BMI Calculator</string>
    <string name="header_image_description">App logo</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="age">Age</string>
    <string name="feet">Feet</string>
    <string name="inches">Inches</string>
    <string name="weight_kg">Weight (kg)</string>
    <string name="calculate">CALCULATE</string>
    <string name="text_view_result_placeholder">23.6 - You are a healthy weight!</string>
</resources>